[package]
name = "mvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11.0"
regex = "1.5"
os_info = "3.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "4.0"