[package]
name = "mvm"
version = "0.1.0"
edition = "2021"
author = "Shubham singh	<github: github.com/shubhexists>"
description = "A simple, easy to use multiple language version manager"
license-file = "LICENSE"
repository = "https://github.com/shubhexists/mvm"
categories = ["development-tools", "cli", "developer-utility", "version-manager"]
keywords = ["mvm", "version-manager", "cli", "development-tools", "developer-utility"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11.0"
regex = "1.5"
os_info = "3.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "4.0"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1.6"
colored = "2.0"
symlink = "0.1.0"